[package]
name = "git-cache-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.10.1"
tower = "0.4.13"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
